option java_package = "com.chuangyou.common.protobuf.pb.task";
option java_outer_classname = "PassFbInnerProto";

message PassFbInnerMsg {
	required int32 campaignId = 1;
	repeated int64 players = 2;
	optional int32 teamId=3;
}