option java_package = "com.chuangyou.common.protobuf.pb.map";
option java_outer_classname = "SpawnNodeChangeMsgProto";
message SpawnNodeChangeMsg{
	optional int32  nodeId = 1; //节点ID
	optional int32  statu = 2;  //节点状态
}

